force-app/main/default/objects/self_reg__c/self_reg__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is used to hold the recaptcha keys and static urls.</description>
    <label>u-blox Portal self reg data</label>
</CustomObject>