force-app/main/default/objects/self_reg__c/fields/base_URL__c.field-meta.xml
<CustomField>
    <fullName>base_URL__c</fullName>
    <label>base URL</label>
    <type>Url</type>
</CustomField>