force-app/main/default/objects/self_reg__c/fields/registration_landing_page__c.field-meta.xml
<CustomField>
    <fullName>registration_landing_page__c</fullName>
    <label>registration landing page</label>
    <type>Url</type>
</CustomField>