force-app/main/default/objects/self_reg__c/fields/secret__c.field-meta.xml
<CustomField>
    <fullName>secret__c</fullName>
    <label>secret</label>
    <length>60</length>
    <type>Text</type>
</CustomField>