force-app/main/default/objects/self_reg__c/fields/site_key__c.field-meta.xml
<CustomField>
    <fullName>site_key__c</fullName>
    <label>site key</label>
    <length>60</length>
    <type>Text</type>
</CustomField>